# llm_utils

./: Cargo.toml  README.md
examples/: model_hf.rs  model_local.rs  model_presets.rs
src/: grammar.rs  hf_loader.rs  lib.rs  logit_bias.rs  prompting.rs  text_utils.rs
src/chunking/: mod.rs
src/grammar/: basic_url.rs  boolean.rs  exact_string.rs  faux_url.rs  integer.rs  mod.rs  sentences.rs  text.rs  words.rs
src/grammar/old/: sentence_list.rs
src/models/: anthropic.rs  gguf.rs  mod.rs  openai.rs  safe_tensors.rs
src/models/api_model/: anthropic.rs  mod.rs  openai.rs  perplexity.rs
src/models/local_model/: chat_template.rs  hf_loader.rs  mod.rs  model_metadata.rs
src/models/local_model/gguf/: gguf_file.rs  gguf_metadata.rs  gguf_tokenizer.rs  memory.rs  mod.rs  vram.rs
src/models/local_model/gguf/loaders/: hf.rs  local.rs  preset.rs
src/models/local_model/gguf/preset/: mod.rs
src/models/local_model/gguf/tools/: gguf_tokenizer.rs
src/models/local_model/metadata/: config_json.rs  general.rs  tokenizer.rs
src/models/local_model/metadata/llm/: llama.rs  mod.rs
src/models/local_model/preset/: mod.rs
src/models/local_model/preset/mistral/mistral_small_instruct_2409/: model_macro_data.json
src/models/open_source/: gguf.rs  mod.rs  safe_tensors.rs
src/models/open_source/preset/: mod.rs
src/models/open_source/preset/llama/: mod.rs
src/models/open_source/preset/llama/llama_3_70b_instruct/: config.json  mod.rs
src/models/open_source/preset/llama/llama_3_8b_instruct/: mod.rs
src/models/open_source/preset/mistral/: mod.rs
src/models/open_source/preset/mistral/mistral_7b_instruct_v0_3/: mod.rs
src/models/open_source/preset/mistral/mixtral_8x7b_instruct_v0_1/: mod.rs
src/models/open_source/preset/phi/: mod.rs
src/models/open_source/preset/phi/phi_3_medium_4k_instruct/: mod.rs
src/models/open_source/preset/phi/phi_3_mini_4k_instruct/: mod.rs
src/models/open_source/preset/phi/phi_3_small_8k_instruct/: mod.rs
src/models/open_source_model/: chat_template.rs  gguf.rs  hf_loader.rs  mod.rs  model_config_json.rs  vram.rs
src/models/open_source_model/preset/: mod.rs  preset_loader.rs
src/prompting/: chat_template_format.rs  chat_template_prompt.rs  concat.rs  mod.rs  openai_prompt.rs  prompt_message.rs  token_count.rs
src/text_utils/: chunk.rs  clean_html.rs  clean_text.rs  mod.rs  split.rs
src/text_utils/chunking/: dfs_chunker.rs  external_text_chunker.rs  linear_chunker.rs  mod.rs  overlap.rs
src/text_utils/splitting/: mod.rs  rule_based.rs
src/text_utils/test_text/: mod.rs
src/text_utils/test_text/files/: bnf.toml  doom.toml  katana.toml  long.toml  macomber.toml  romeo_juliet.toml  shake.toml  turing.toml
src/tokenizer/: mod.rs
(+10 files in other folders)
