[package]
authors=["Shelby Jenkins"]
categories=["multimedia::encoding", "science"]
description="Basic LLM tools, best practices, and minimal abstraction."
edition="2021"
homepage="https://github.com/shelbyJenkins/llm_utils"
keywords=["gguf", "huggingface", "llm", "nlp", "tokenizer"]
license="MIT"
name="llm_utils"
readme="README.md"
repository="https://github.com/shelbyJenkins/llm_utils"
version="0.0.10"

[dependencies]
anyhow="1.0.86"
byteorder="1.5.0"
dotenvy="0.15.7"
hf-hub={version="0.3.2"}
html2text="0.12.6"
linkify="0.10.0"
minijinja="2.0.1"
paste="1.0.15"
rayon="1.10.0"
readability="0.3.0"
regex="1.11.0"
serde={version="1.0.202"}
serde_json="1.0.117"
thiserror="1.0.64"
tiktoken-rs="0.5.9"
tokenizers="0.20.0"
unicode-properties="0.1.3"
unicode-segmentation="1.11.0"
url="2.5.2"

[dev-dependencies]
text-splitter={version="0.14.0", features=["tiktoken-rs"]}
